search section done

--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
     <header>
         <h1>Weather Dashboard</h1>
     </header>
+    <section class="page">
+        <section class="searchSection">
+            <div class="inputdiv">
+                <input class="input" placeholder="City">
+            </div>
+            <div class="inputdiv">
+                <button class="searchButton">Search!</button>
+            </div>
+            <div class="searchHistory">
+                <ul>
+                    <li>Toronto</li>
+                    <li>jamaica</li>
+                </ul>
+            </div>
+        </section>
+        <section class="weatherSection">
+            <div class="details">
+                <h2>
+                    Atlanta
+                </h2>
+
+            </div>
+            <div class="forecast">
+
+            </div>
+        </section>
+    </section>
     <script src="./Assets/js/script.js"></script>
 </body>
 </html>
