--- a/index.html
+++ b/index.html
@@ -17,13 +17,24 @@
                 <input class="input" placeholder="City">
             </div>
             <div class="inputdiv">
-                <button class="searchButton">Search!</button>
+                <button class="searchButton btn">Search!</button>
             </div>
             <div class="searchHistory">
                 <ul>
                     <li>Toronto</li>
                     <li>jamaica</li>
+                    <li>Toronto</li>
+                    <li>jamaica</li>
+                    <li>Toronto</li>
+                    <li>jamaica</li>
+                    <li>Toronto</li>
+                    <li>jamaica</li>
+                    <li>Toronto</li>
+                    <li>jamaica</li>
                 </ul>
+            </div>
+            <div class="inputdiv">
+                <button class="delButton btn">Clear History</button>
             </div>
         </section>
         <section class="weatherSection">
@@ -31,10 +42,56 @@
                 <h2>
                     Atlanta
                 </h2>
-
+                <h3>
+                    Temp: 
+                </h3>
+                <h3>
+                    Wind: 
+                </h3>
+                <h3>
+                    Humidity: 
+                </h3>
+                <h3>
+                    UV Index: 
+                </h3>
             </div>
             <div class="forecast">
-
+                <div>
+                    <h2>
+                        5-Day Forecast:
+                    </h2>
+                </div>
+                <div class="forecastdivs">
+                    <div class="day">
+                        <h3>
+                            date
+                        </h3>
+                        <h3>
+                            icon
+                        </h3>
+                        <h3>
+                            temp
+                        </h3>
+                        <h3>
+                            wind
+                        </h3>
+                        <h3>
+                            humidity
+                        </h3>
+                    </div>
+                    <div class="day">
+                        2
+                    </div>
+                    <div class="day">
+                        3
+                    </div>
+                    <div class="day">
+                        4
+                    </div>
+                    <div class="day">
+                        5
+                    </div>
+                </div>
             </div>
         </section>
     </section>
